# app/Http/Controllers/CommentController.php
@@ -9,19 +9,152 @@ use Illuminate\Support\Facades\Auth;
 
 class CommentController extends Controller
 {
+
+
+    /**
+     * @OA\Post(
+     *     path="/api/comments/{postid}",
+     *     tags={"Comment"},
+     *     summary="Create a new comment for a post",
+     *     security={{"sanctum": {}}},
+     *     @OA\Parameter(
+     *         name="post",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="content", type="string")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Successful response",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="id", type="integer"),
+     *             @OA\Property(property="content", type="string"),
+     *             @OA\Property(property="post_id", type="integer"),
+     *             @OA\Property(property="user_id", type="integer"),
+     *             @OA\Property(property="created_at", type="string", format="date-time"),
+     *             @OA\Property(property="updated_at", type="string", format="date-time")
+     *         )
+     *     )
+     * )
+     */
+    public function store(Request $request, $postId)
+    {
+        $validatedData = $request->validate([
+            'content' => 'required|string',
+        ]);
+
+        $post = Post::findOrFail($postId);
+        $comment = $post->comments()->create([
+            'content' => $validatedData['content'],
+            'user_id' => $request->user()->id,
+        ]);
+
+        return response()->json($comment, 201);
+    }
+    /**
+     * @OA\Patch(
+     *     path="/api/comments/{id}",
+     *     tags={"Comment"},
+     *     summary="Update an existing comment",
+     *     security={{"sanctum": {}}},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="content", type="string")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful response",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="id", type="integer"),
+     *             @OA\Property(property="content", type="string"),
+     *             @OA\Property(property="post_id", type="integer"),
+     *             @OA\Property(property="user_id", type="integer"),
+     *             @OA\Property(property="created_at", type="string", format="date-time"),
+     *             @OA\Property(property="updated_at", type="string", format="date-time")
+     *         )
+     *     )
+     * )
+     */
+    public function update(Request $request, $id)
+    {
+        $comment = Comment::findOrFail($id);
+
+        // Check if the user is the owner of the comment
+        if ($comment->user_id !== $request->user()->id) {
+            return response()->json(['error' => 'You are not authorized to update this comment.'], 403);
+        }
+
+        $validatedData = $request->validate([
+            'content' => 'required|string',
+        ]);
+
+        $comment->update([
+            'content' => $validatedData['content'],
+        ]);
+
+        return response()->json($comment, 200);
+    }
+    /**
+     * @OA\Delete(
+     *     path="/api/comments/{id}",
+     *     tags={"Comment"},
+     *     summary="Delete an existing comment",
+     *     security={{"sanctum": {}}},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(
+     *         response=204,
+     *         description="Successful response"
+     *     )
+     * )
+     */
+    public function destroy(Request $request, $id)
+    {
+        $comment = Comment::findOrFail($id);
+
+        // Check if the user is the owner of the comment
+        if ($comment->user_id !== $request->user()->id) {
+            return response()->json(['error' => 'You are not authorized to delete this comment.'], 403);
+        }
+
+        $comment->delete();
+
+        return ["success" => true, "Message" => "Post deleted successfully"];
+    }
+
     /**
      * @OA\Get(
-     *     path="/posts/{postId}/comments",
+     *     path="/api/posts/{postId}/comments",
      *     tags={"Comment"},
-     *     summary="Get comments for a post",
-     *     description="Retrieve all comments for the specified post",
+     *     summary="Get all comments on a specific post",
+     *     security={{"sanctum": {}}},
      *     @OA\Parameter(
      *         name="postId",
      *         in="path",
      *         required=true,
-     *         @OA\Schema(
-     *             type="integer"
-     *         )
+     *         @OA\Schema(type="integer")
      *     ),
      *     @OA\Response(
      *         response=200,
@@ -29,155 +162,22 @@ class CommentController extends Controller
      *         @OA\JsonContent(
      *             type="array",
      *             @OA\Items(
+     *                 type="object",
      *                 @OA\Property(property="id", type="integer"),
      *                 @OA\Property(property="content", type="string"),
-     *                 @OA\Property(property="user", type="object", @OA\Property(property="name", type="string")),
-     *                 @OA\Property(property="created_at", type="string", format="date-time")
+     *                 @OA\Property(property="post_id", type="integer"),
+     *                 @OA\Property(property="user_id", type="integer"),
+     *                 @OA\Property(property="created_at", type="string", format="date-time"),
+     *                 @OA\Property(property="updated_at", type="string", format="date-time")
      *             )
      *         )
-     *     ),
-     *     @OA\Response(
-     *         response=404,
-     *         description="Post not found",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="success", type="boolean", example=false),
-     *             @OA\Property(property="message", type="string", example="Post not found")
-     *         )
      *     )
      * )
      */
-    public function index($postId)
+    public function getAllCommentsOnPost(Request $request, $postId)
     {
-        $post = Post::find($postId);
+        $comments = Comment::where('post_id', $postId)->get();
 
-        if ($post) {
-            $comments = $post->comments()->with('user')->get();
-            return response()->json($comments);
-        } else {
-            return response()->json([
-                'success' => false,
-                'message' => 'Post not found'
-            ], 404);
-        }
-    }
-
-    /**
-     * @OA\Post(
-     *     path="/posts/{postId}/comments",
-     *      tags={"Comment"},
-     *     summary="Store a new comment",
-     * 
-     *     description="Create a new comment for the specified post",
-     *     @OA\Parameter(
-     *         name="postId",
-     *         in="path",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="integer"
-     *         )
-     *     ),
-     *     @OA\RequestBody(
-     *         required=true,
-     *         @OA\JsonContent(
-     *             @OA\Property(property="content", type="string", example="This is a new comment.")
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=201,
-     *         description="Successful response",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="id", type="integer", example=1),
-     *             @OA\Property(property="content", type="string", example="This is a new comment."),
-     *             @OA\Property(property="user_id", type="integer", example=1),
-     *             @OA\Property(property="post_id", type="integer", example=1),
-     *             @OA\Property(property="created_at", type="string", format="date-time"),
-     *             @OA\Property(property="updated_at", type="string", format="date-time")
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=404,
-     *         description="Post not found",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="success", type="boolean", example=false),
-     *             @OA\Property(property="message", type="string", example="Post not found")
-     *         )
-     *     )
-     * )
-     */
-    public function store(Request $request, $postId)
-    {
-        $post = Post::findOrFail($postId);
-
-        $comment = $post->comments()->create([
-            'content' => $request->input('content'),
-            'user_id' => auth()->id(),
-        ]);
-
-        return response()->json($comment, 201);
-    }
-
-    /**
-     * @OA\Delete(
-     *     path="/posts/{postId}/comments/{commentId}",
-     *     tags={"Comment"},
-     *     summary="Delete a comment",
-     *     description="Delete the specified comment for the given post",
-     *     @OA\Parameter(
-     *         name="postId",
-     *         in="path",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="integer"
-     *         )
-     *     ),
-     *     @OA\Parameter(
-     *         name="commentId",
-     *         in="path",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="integer"
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=200,
-     *         description="Successful response",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="success", type="boolean", example=true),
-     *             @OA\Property(property="message", type="string", example="Comment deleted successfully")
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=404,
-     *         description="Comment not found",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="success", type="boolean", example=false),
-     *             @OA\Property(property="message", type="string", example="Comment not found")
-     *         )
-     *     )
-     * )
-     */
-    public function destroy($postId, $commentId)
-    {
-        $comment = Comment::where('post_id', $postId)->where('id', $commentId)->first();
-
-        if ($comment) {
-            if ($comment->user_id == Auth::user()->id) {
-                $comment->delete();
-                return response()->json([
-                    'success' => true,
-                    'message' => 'Comment deleted successfully'
-                ]);
-            } else {
-                return response()->json([
-                    'success' => false,
-                    'message' => 'You are not authorized to delete this comment'
-                ], 403);
-            }
-        } else {
-            return response()->json([
-                'success' => false,
-                'message' => 'Comment not found'
-            ], 404);
-        }
+        return response()->json($comments, 200);
     }
 }
